- drakboot:
  o fix .old backup for grub2's grub.cfg

Version 17.52 - 17 July 2016

- drakboot:
  o fix not being able to edit default grub2 cmdline (mga#18952)

Version 17.51 - 12 July 2016

- diskdrake:
  o don't offer to format RAID or BIOS boot partition
  o fix clearing an already filled GPT disk
  o make clear a BIOS boot partition cannot have a mount point
  o make error about BIOS boot partition more explicit about
    its purpose and that it must be created (mga#18923)

Version 17.50 - 8 July 2016

- diskdrake:
  o display a wait message when adding a PV to VG

Version 17.49 - 6 July 2016

- diskdrake:
  o GPT: prevent geometry issue on last partition (mga#18666, mga#17796)
- recognize new kernel-4.7 drivers

Version 17.48 - 4 July 2016

- diskdrake:
  o do not offer to check for bad blocks on btrfs (mga#12393)
  o do not warn about no bootloader can boot LVM as grub2 can (mga#9426)
  o do not warn about no bootloader can boot RAID[^1] as grub2 can (mga#11324)
  o enable bad blocks checking on JFS
- drakboot:
  o allow installing grub2 on XFS /
  o make clear grub2 is installed on ESP under UEFI
- finish-install:
  o drop reload-dm hack
  o drop gnome-reboot hack

Version 17.47 - 30 June 2016

- recognize some missing wireless drivers (mga#16768)
- diskdrake:
  o fix being able to create vfat on UEFI (mga#15698)

Version 17.46 - 24 June 2016

- drakboot:
  o do not alter /etc/default/grub on kernel updates, only when running
    drakboot (mga#18783)

Version 17.45 - 24 June 2016

- diskdrake:
  o keep UUID when formating btrfs (mga#18673)

Version 17.44 - 24 June 2016

- diskdrake:
  o fix preserving UUID when formating jfs/nilfs/xfs
- drakboot:
  o add a "Do not touch ESP or MBR" option (mga#18770)
  o do not offer to pick the disk where to install grub2 on UEFI
  o filter GPT disks w/o a BIOS boot part (mga#18770)
  o warn if grub2 is not installed on MBR/ESP

Version 17.42 - 22 June 2016

- drakboot: