@@ -1,5 +1,6 @@
 - drakboot:
   o fix .old backup for grub2's grub.cfg
+- authentication: add support for sha256/sha512 and default to sha512
 
 Version 17.52 - 17 July 2016
 
